-
Bug
-
Resolution: Fixed
-
P3
-
9, 11, 14
-
b14
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8241450 | 14.0.2 | Henry Jen | P3 | Resolved | Fixed | b01 |
| JDK-8246448 | 13.0.4 | Henry Jen | P3 | Resolved | Fixed | b04 |
| JDK-8241626 | 11.0.8-oracle | Henry Jen | P3 | Resolved | Fixed | b01 |
| JDK-8241452 | 11.0.8 | Henry Jen | P3 | Resolved | Fixed | b01 |
As reported by Robert Stupp in mailing list
https://mail.openjdk.java.net/pipermail/core-libs-dev/2020-March/065135.html
When a comment line last character is the 4096th of the chunk, the comment line is mistakenly considered as a valid argument.
Attached is the argument file from the report that can be used to reproduce the bug.
https://mail.openjdk.java.net/pipermail/core-libs-dev/2020-March/065135.html
When a comment line last character is the 4096th of the chunk, the comment line is mistakenly considered as a valid argument.
Attached is the argument file from the report that can be used to reproduce the bug.
- backported by
-
JDK-8241450 argfiles parsing broken for argfiles with comment cross 4096 bytes chunk
-
- Resolved
-
-
JDK-8241452 argfiles parsing broken for argfiles with comment cross 4096 bytes chunk
-
- Resolved
-
-
JDK-8241626 argfiles parsing broken for argfiles with comment cross 4096 bytes chunk
-
- Resolved
-
-
JDK-8246448 argfiles parsing broken for argfiles with comment cross 4096 bytes chunk
-
- Resolved
-
- relates to
-
JDK-8241445 Fix copyrights after JDK-8240629 change
-
- Resolved
-