src/java.base/share/native/libjli/args.c
@@ -216,11 +216,12 @@ static char* nextToken(__ctx_args *pctx) {
         } else if (pctx->state == IN_COMMENT) {
             while (ch != '\n' && ch != '\r') {
                 nextc++;
-                if (nextc > eob) {
+                if (nextc >= eob) {
                     return NULL;
                 }
                 ch = *nextc;
             }
+            anchor = nextc + 1;
             pctx->state = FIND_NEXT;
             continue;
         }
@@ -256,6 +257,7 @@ static char* nextToken(__ctx_args *pctx) {
                     continue;
                 }
                 pctx->state = IN_COMMENT;
+                anchor = nextc + 1;
                 break;
             case '\\':
                 if (pctx->state != IN_QUOTE) {
@@ -291,9 +293,12 @@ static char* nextToken(__ctx_args *pctx) {
     }
 
     assert(nextc == eob);
-    if (anchor != nextc) {
-        // not yet return until end of stream, we have part of a token.
-        JLI_List_addSubstring(pctx->parts, anchor, nextc - anchor);
+    // Only need partial token, not comment or whitespaces
+    if (pctx->state == IN_TOKEN || pctx->state == IN_QUOTE) {
+        if (anchor < nextc) {
+            // not yet return until end of stream, we have part of a token.
+            JLI_List_addSubstring(pctx->parts, anchor, nextc - anchor);
+        }
     }
     return NULL;
 }
